--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -24,7 +24,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: theme(colors.shark.900);
+  background-color: theme(colors.gray.900);
   border-radius: theme(borderRadius.DEFAULT);
   width: 6px;
 }
